fixed spacing issues with card tiles on portfolio page

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+html,
 body {
   height: 100%;
   margin: 0;
@@ -10,12 +11,22 @@ body {
 }
 .App {
 text-align: center;
+margin: 0;
 }
 
 .tiles{
   margin-top: 100px;
   margin-bottom: 100px;
+  padding-bottom: 100px;
 }
+
+.card-img-top{
+  
+  height: 15vw;
+  
+}
+  
+
 
 .profile-pic{
   /* max-width: 60%;
